@@ -2,7 +2,6 @@ package seedu.address.storage;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -12,6 +11,8 @@ import seedu.address.commons.exceptions.IllegalValueException;
 import seedu.address.model.AddressBook;
 import seedu.address.model.ReadOnlyAddressBook;
 import seedu.address.model.client.Client;
+import seedu.address.model.deal.Deal;
+import seedu.address.model.property.Property;
 
 /**
  * An Immutable AddressBook that is serializable to JSON format.
@@ -20,15 +21,25 @@ import seedu.address.model.client.Client;
 class JsonSerializableAddressBook {
 
     public static final String MESSAGE_DUPLICATE_CLIENT = "Clients list contains duplicate client(s).";
+    public static final String MESSAGE_DUPLICATE_PROPERTY = "Properties list contains duplicate properties.";
+    public static final String MESSAGE_DUPLICATE_DEAL = "Deals list contains duplicate deal(s).";
 
     private final List<JsonAdaptedClient> clients = new ArrayList<>();
+    private final List<JsonAdaptedProperty> properties = new ArrayList<>();
+    private final List<JsonAdaptedDeal> deals = new ArrayList<>();
 
     /**
-     * Constructs a {@code JsonSerializableAddressBook} with the given clients.
+     * Constructs a {@code JsonSerializableAddressBook} with the given clients, properties and deals.
      */
     @JsonCreator
-    public JsonSerializableAddressBook(@JsonProperty("clients") List<JsonAdaptedClient> clients) {
+    public JsonSerializableAddressBook(@JsonProperty("clients") List<JsonAdaptedClient> clients,
+                                       @JsonProperty("properties") List<JsonAdaptedProperty> properties,
+                                       @JsonProperty("deals") List<JsonAdaptedDeal> deals) {
         this.clients.addAll(clients);
+        this.properties.addAll(properties);
+        if (deals != null) {
+            this.deals.addAll(deals);
+        }
     }
 
     /**
@@ -37,7 +48,9 @@ class JsonSerializableAddressBook {
      * @param source future changes to this will not affect the created {@code JsonSerializableAddressBook}.
      */
     public JsonSerializableAddressBook(ReadOnlyAddressBook source) {
-        clients.addAll(source.getClientList().stream().map(JsonAdaptedClient::new).collect(Collectors.toList()));
+        clients.addAll(source.getClientList().stream().map(JsonAdaptedClient::new).toList());
+        properties.addAll(source.getPropertyList().stream().map(JsonAdaptedProperty::new).toList());
+        deals.addAll(source.getDealList().stream().map(JsonAdaptedDeal::new).toList());
     }
 
     /**
@@ -47,6 +60,7 @@ class JsonSerializableAddressBook {
      */
     public AddressBook toModelType() throws IllegalValueException {
         AddressBook addressBook = new AddressBook();
+
         for (JsonAdaptedClient jsonAdaptedClient : clients) {
             Client client = jsonAdaptedClient.toModelType();
             if (addressBook.hasClient(client)) {
@@ -54,7 +68,23 @@ class JsonSerializableAddressBook {
             }
             addressBook.addClient(client);
         }
+
+        for (JsonAdaptedProperty jsonAdaptedProperty : properties) {
+            Property property = jsonAdaptedProperty.toModelType();
+            if (addressBook.hasProperty(property)) {
+                throw new IllegalValueException(MESSAGE_DUPLICATE_PROPERTY);
+            }
+            addressBook.addProperty(property);
+        }
+
+        for (JsonAdaptedDeal jsonAdaptedDeal : deals) {
+            Deal deal = jsonAdaptedDeal.toModelType();
+            if (addressBook.hasDeal(deal)) {
+                throw new IllegalValueException(MESSAGE_DUPLICATE_DEAL);
+            }
+            addressBook.addDeal(deal);
+        }
+
         return addressBook;
     }
-
 }
